fixed mobile keyboard and form filled convo breaker not showing after loggin in again

--- a/src/components/Chat/ChatModule/LiveChat/MessageBody/MessageBody.scss
+++ b/src/components/Chat/ChatModule/LiveChat/MessageBody/MessageBody.scss
@@ -23,6 +23,6 @@
         padding-right: 1rem;
         height: 100vh;
         padding-top: 65%;
-        padding-bottom: 5%;
+        padding-bottom: 0%;
     }
 }
